internal/gatewayapi/testdata/gateway-with-listener-with-tls-passthrough-and-proxy-protocol.in.yaml
gateways:
  - apiVersion: gateway.networking.k8s.io/v1beta1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: gateway-1
      annotations:
        cloud.teleport.dev/downstream-proxy-protocol: "true"
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: tls-passthrough
          protocol: TLS
          port: 443
          tls:
            mode: Passthrough
          allowedRoutes:
            namespaces:
              from: All
tlsRoutes:
  - apiVersion: gateway.networking.k8s.io/v1alpha2
    kind: TLSRoute
    metadata:
      namespace: default
      name: tlsroute-1
    spec:
      parentRefs:
        - namespace: envoy-gateway
          name: gateway-1
      rules:
        - backendRefs:
            - name: service-2
              port: 8080
